<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ran="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/gif_arb_qr_mainProgressBar"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gif_arb_qr_button_selectImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_gif" />
        </LinearLayout>

        <TextView
            android:id="@+id/gif_arb_qr_selected_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gif_arb_qr_button_encode_gif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_gif"
                android:visibility="gone" />
        </LinearLayout>

        <com.meng.picTools.libAndHelper.mengViews.MengEditText
            android:id="@+id/gif_arb_qr_mainmengTextview_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ran:edittextHint="@string/contents"
            ran:textviewText="@string/input_text" />

        <com.meng.picTools.libAndHelper.mengViews.MengEditText
            android:id="@+id/gif_arb_qr_mengEdittext_dotScale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ran:edittextHint="0.4"
            ran:textviewText="@string/data_dot_scale" />

        <CheckBox
            android:id="@+id/gif_qr_mainCheckbox_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/use_first_frame_size" />

        <com.meng.picTools.libAndHelper.mengViews.MengEditText
            android:id="@+id/gif_qr_mainEditText_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            ran:edittextHint="300"
            ran:textviewText="@string/size" />

        <CheckBox
            android:id="@+id/gif_arb_qr_checkbox_autocolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/auto_color" />

        <com.meng.picTools.libAndHelper.mengViews.MengColorBar
            android:id="@+id/gif_arb_qr_main_colorBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>

